fix: homepage overflow

--- a/packages/homepage/src/css/global.css
+++ b/packages/homepage/src/css/global.css
@@ -12,7 +12,7 @@ body {
   color: white;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue';
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 
 @media screen and (-webkit-max-device-pixel-ratio: 1.3),
